<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="1000"
        app:iss_selected_dot="@drawable/default_selected_dot"
        app:iss_unselected_dot="@drawable/default_unselected_dot"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="start"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageSlider"
        tools:text="Название товара" />

    <LinearLayout
        android:id="@+id/ratingBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <ImageView
            android:id="@+id/image"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/baseline_star_24" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="12sp"
            tools:text="5.0" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/priceCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:cardBackgroundColor="#bbbbbb"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/ratingBlock">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="1000 $" />

            <TextView
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="18sp"
                tools:text="Ваша скидка -17%" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/basketBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/go_to_basket"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buyBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:text="@string/buy"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:cardBackgroundColor="#bbbbbb"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/priceCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/about_product" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/priceCard"
                tools:text="Какой-то длинный текст, описывающий данный товар. Скорее всего занимает несколько строк." />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_id"/>

                <TextView
                    android:gravity="end"
                    android:id="@+id/productId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category"/>

                <TextView
                    android:id="@+id/category"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/brand"/>

                <TextView
                    android:id="@+id/brand"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>